<resources>
    <string name="app_name">MyFinances</string>
    <string name="finger">FingerBackground </string>
    <string name="diary">Дневник финансов</string>
    <string name="username">Логин </string>
    <string name="welcome_messages">Hello, %1$s!</string>
    <string name="parole">Код</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="lets_go">Вперед!</string>
    <string name="name">Ваше Имя (необязательно)</string>
    <string name="reg_parole">Код для входа</string>
    <string name="reg_parole2">Повторите код</string>
    <string name="error_login">Неправильный логин или пароль</string>
    <string name="buy_list">Список покупок</string>
    <string name="add_button">Добавить</string>
    <string name="to_buy_list">К списку покупок</string>
    <string name="add_dialog">Добавление в список</string>
    <string name="add_msg">Обязательно выберите категорию товара!</string>
    <string name="close">Закрыть</string>
    <string name="bought">Купил</string>
    <string name="byyyy">Убрать из списка покупок</string>
    <string name="delete">Удалить из списка</string>
    <string name="cost">Укажите примерную стоимость покупки</string>
    <string name="cost_attention">Обязательно заполните поле если купили товар!</string>
    <string name="cost_attention2">Вы не заполнили поле стоимости!</string>
    <string-array name="categories">
        <item>Еда</item>
        <item>Транспорт</item>
        <item>Лекарства</item>
        <item>Техника</item>
        <item>Путешествия</item>
        <item>Дом</item>
        <item>Другое</item>
    </string-array>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vehicula, mauris vel malesuada aliquet,Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vehicula, mauris vel malesuada aliquet,Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vehicula, mauris vel malesuada aliquet,Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vehicula, mauris vel malesuada aliquet,Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vehicula, mauris vel malesuada aliquet,</string>
</resources>