<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/diary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/diary"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/username"
            android:textColor="@color/secondar"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diary" />

        <TextView
            android:id="@+id/persname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/name"
            android:textColor="@color/secondar"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <TextView
            android:id="@+id/parole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/reg_parole"
            android:textColor="@color/secondar"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/persname" />

        <TextView
            android:id="@+id/parole2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/reg_parole2"
            android:textColor="@color/secondar"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/parole" />

        <EditText
            android:id="@+id/editTextTextUserName"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:layout_marginTop="85dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diary" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextTextUserName" />

        <EditText
            android:id="@+id/editTextNumberPassword"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:inputType="numberPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <EditText
            android:id="@+id/editTextNumberPassword2"
            android:layout_width="290dp"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:inputType="numberPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />

        <Button
            android:id="@+id/button"
            android:layout_width="314dp"
            android:layout_height="71dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/orange_button"
            android:fontFamily="@font/montserrat"
            android:onClick="startMainActivity"
            android:text="@string/sign_up"
            android:textColor="@color/dark_txt"
            android:textSize="20sp"
            app:cornerRadius="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword"
            app:layout_constraintVertical_bias="0.561" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>