<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@drawable/gradient_back"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/BG"
        tools:context=".Menu">

        <LinearLayout
            android:id="@+id/lay"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/other_card"
            android:backgroundTint="@color/grey_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/diary"
                android:textColor="#373737"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/hello_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/diary"
            android:textColor="#373737"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/piechart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lay" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="340dp"
            android:layout_height="340dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/finger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lay"
            app:srcCompat="@drawable/ic_circle_finger" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/piechart"
            android:layout_width="340dp"
            android:layout_height="340dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/piechart" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button2"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="76dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/montserrat"
            android:onClick="startBuyListActivity"
            android:text="@string/to_buy_list"
            android:textColor="@color/dark_txt"
            android:textSize="13sp"
            app:cornerRadius="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

