<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_back"
    android:orientation="vertical"
    tools:context=".BuyList">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/other_card"
        android:backgroundTint="@color/grey_main">

        <TextView
            android:id="@+id/textView"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buy_list"
            android:textColor="#373737"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="20dp"
        android:contentDescription="scroll"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/list_card"
                android:backgroundTint="@color/white"
                android:padding="10dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="Подушечки с молочной начинкой"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"/>

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/button_circle"
                    android:backgroundTint="#FFD9C4"
                    android:src="@drawable/ic_bought">

                </ImageButton>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/list_card"
                android:backgroundTint="@color/white"
                android:padding="10dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="Тархун"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"/>

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="#FFD9C4"
                    app:cornerRadius="40dp"
                    android:background="@drawable/button_circle"
                    android:src="@drawable/ic_bought">
                </ImageButton>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/list_card"
                android:backgroundTint="@color/white"
                android:padding="10dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"/>

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="#FFD9C4"
                    app:cornerRadius="40dp"
                    android:background="@drawable/button_circle"
                    android:src="@drawable/ic_bought">
                </ImageButton>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/list_card"
                android:backgroundTint="@color/white"
                android:padding="10dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="Что-то еще"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"/>

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="#FFD9C4"
                    app:cornerRadius="40dp"
                    android:background="@drawable/button_circle"
                    android:src="@drawable/ic_bought">
                </ImageButton>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="280dp"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/bright_orange"
        android:onClick="CreateAddDialog"
        android:text="@string/add_button"
        android:textColor="@color/white"
        app:cornerRadius="40dp">

    </Button>

</LinearLayout>